[package]
name = "mosis"
version = "0.2.0"
authors = ["Evan Richter <evanjrichter@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
resolver = "2"
description = "Assembler and Disassembler for the MOSIS instruction set"
repository = "https://github.com/evanrichter/mosis"
documentation = "https://docs.rs/mosis"
categories = ["encoding"]
keywords = ["mosis", "assembler", "disassembler"]
readme = "README.md"

[dependencies]
thiserror = "1"
